syntax = "proto3";

option go_package = "github.com/Sirlanri/distiot-user-server/rpcHandler/devicepb";

package devicepb;

service DeviceService {
    rpc GetDataTypeBydID (Didmsg) returns (DataTypemsg) {}
}

message Didmsg {
    string id = 1;
}

message DataTypemsg {
    int32 dataType = 1;
}
